--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,17789],[],[[4,0,0,[],[1,371,3557],[]],[5,0,0,[],[1,3930,3782],[]],[6,0,0,[],[1,7713,3407],[]],[7,0,0,[],[1,11122,3254],[]],[8,0,0,[],[1,14378,3410],[]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,17888],[],[[4,0,0,[],[1,482,3457],[]],[5,0,0,[],[1,3941,3446],[]],[6,0,0,[],[1,7388,3584],[]],[7,0,0,[],[1,10972,3456],[]],[8,0,0,[],[1,14429,3457],[]]],[],[5,5,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login Template Copy","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_template copy.robot","eNqtzEEKgzAQBdCriODS/tKlqCD2Cq7LaMYaSDKSmVK8veAZ3D9eS8WWee3K1QduAIwNJuWsGFz0CW/5pyDkFEq/hR1HqbPMYjBWUwT5+vQxjnsg4+r1XGQ/Hpco+/vPFtSfa1JAwA==","*Case 1","*Case 2","*Case 3","*Case 4","*case 5"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login Templatecopy","*C:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_templatecopy.robot","*tests/login_templatecopy.robot","*Case 1","*Case 2","*Case 3","*Case 4","*case 5"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Login Template Copy","name":"Login Template Copy","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Login Templatecopy","name":"Login Templatecopy","pass":5,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742910015126;
+window.output["baseMillis"] = 1742910644090;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 17817;
+window.output["generated"] = 17922;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
