--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5879],[],[[4,0,5,[6,7],[1,582,5295],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4598],[],[[4,0,5,[6,7],[1,391,4199],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login Templatecopy","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_templatecopy.robot","eNqtzEEKAjEMBdCrDN2Pf19qQfQKsx5im9FC25QmIt5e8AyuH7xAy3PycXZHqewBXD025am45FY6bvLuVSgrlF6JMzdZp9zFYKymqPIofTduo5JxkvE5/djFP4cBFL8pAD+y","*Login with valid credentials","*<p>login avec valid cred\x3c/p>","*login","*smoke"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login Templatecopy","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_templatecopy.robot","eNqtzEEKAjEMBdCrDN2Pf19qQfQKsx5im9FC25QmIt5e8AyuH7xAy3PycXZHqewBXD025am45FY6bvLuVSgrlF6JMzdZp9zFYKymqPIofTduo5JxkvE5/djFP4cBFL8pAD+y","*Login with invalid credentials","*<p>login avec valid cred\x3c/p>","*login","*smoke"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Login Templatecopy","name":"Login Templatecopy","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:04","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:00:04","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Login Templatecopy","name":"Login Templatecopy","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742984967704;
+window.output["baseMillis"] = 1742985317169;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5904;
+window.output["generated"] = 4640;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
