--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4598],[],[[4,0,5,[6,7],[1,391,4199],[[0,8,9,0,10,11,0,0,[1,393,1586],[[393,2,12]]],[0,13,14,0,0,15,0,0,[1,1981,192],[[0,16,9,0,17,18,0,0,[1,1982,190],[[1983,2,19]]]]],[0,20,9,0,21,22,0,0,[1,2178,118],[[2179,2,23],[2225,2,24]]],[0,25,14,0,0,0,0,0,[1,2297,95],[[0,26,9,0,27,28,0,0,[1,2297,94],[[2298,2,29]]]]],[0,30,14,0,0,0,0,0,[1,2392,33],[[0,31,9,0,32,33,34,0,[1,2393,30],[[2422,2,35]]],[0,36,37,0,38,39,0,0,[1,2423,1],[]],[0,40,37,0,41,42,0,0,[1,2424,1],[]],[0,36,37,0,38,34,0,0,[1,2425,1],[]]]],[2,43,9,0,44,0,0,0,[1,2427,2162],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,1804],[],[[4,0,0,[],[1,453,1347],[[0,5,6,0,7,8,0,0,[1,455,1],[]],[0,9,10,0,11,12,0,0,[1,458,1158],[[459,2,13]]],[0,14,10,0,15,0,0,0,[1,1617,179],[]],[2,16,10,0,17,0,0,0,[1,1798,1],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login Templatecopy","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_templatecopy.robot","eNqtzEEKAjEMBdCrDN2Pf19qQfQKsx5im9FC25QmIt5e8AyuH7xAy3PycXZHqewBXD025am45FY6bvLuVSgrlF6JMzdZp9zFYKymqPIofTduo5JxkvE5/djFP4cBFL8pAD+y","*Login with invalid credentials","*<p>login avec valid cred\x3c/p>","*login","*smoke","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    Chrome","*Opening browser 'Chrome' to base url '<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>'.","*Saisir user-name","*resource","*${USER}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_NAME}    ${username}","*Typing text 'standard_user' into text field 'id:user-name'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id:password    bhbhbuiknjpllj","*Typing password into text field 'id:password'.","*Temporally setting log level to: NONE","*Cliquer sur login","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_BUTTON}","*Clicking button 'id:login-button'.","*Verifier le message d'erreur","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*${error_message}","*${text}","*${text} = Epic sadface: Username and password do not match any user in this service","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*'message: ${text}'","*Should Be Equal As Strings","*<p>Fails if objects are unequal after converting them to strings.\x3c/p>","*${text}    Epic sadface: Username and password do not match any user in this service","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login Templatecopy","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_templatecopy.robot","eNqtzEEKAjEMBdCrDN2Pf19qQfQKsx5im9FC25QmIt5e8AyuH7xAy3PycXZHqewBXD025am45FY6bvLuVSgrlF6JMzdZp9zFYKymqPIofTduo5JxkvE5/djFP4cBFL8pAD+y","*excute avant chaque test","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Hello there avant chaque test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    Chrome    remote_url=http://192.168.1.55:4444/wd/hub","eNp9jUEOwjAMBL9i9dKbrSCKoCq98ADekLSmQSJN5STk+1hwQ4I97q5mrhuv93UBJ7EmFmgvXmLgFnIEZxNDkQe0gwUvfDs3Puct9US1Vky2TDxziDjFQM34exvIjkpUclk8iNaZQW1PFdr8hVeCOe3QHI5osOv6vYbqTL64j+PP4S3CFwBzQ58=","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:04","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:00:04","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Login Templatecopy","name":"Login Templatecopy","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"Login Templatecopy","name":"Login Templatecopy","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742985317169;
+window.output["baseMillis"] = 1742986018611;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4640;
+window.output["generated"] = 1840;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
