--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,1804],[],[[4,0,0,[],[1,453,1347],[[0,5,6,0,7,8,0,0,[1,455,1],[]],[0,9,10,0,11,12,0,0,[1,458,1158],[[459,2,13]]],[0,14,10,0,15,0,0,0,[1,1617,179],[]],[2,16,10,0,17,0,0,0,[1,1798,1],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4792],[],[[4,0,0,[],[1,335,4455],[[0,5,6,0,7,8,0,0,[1,337,1],[]],[0,9,10,0,11,12,0,0,[1,339,3752],[[340,2,13]]],[0,14,10,0,15,0,0,0,[1,4092,694],[]],[2,16,10,0,17,0,0,0,[1,4789,1],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login Templatecopy","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_templatecopy.robot","eNqtzEEKAjEMBdCrDN2Pf19qQfQKsx5im9FC25QmIt5e8AyuH7xAy3PycXZHqewBXD025am45FY6bvLuVSgrlF6JMzdZp9zFYKymqPIofTduo5JxkvE5/djFP4cBFL8pAD+y","*excute avant chaque test","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Hello there avant chaque test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    Chrome    remote_url=http://192.168.1.55:4444/wd/hub","eNp9jUEOwjAMBL9i9dKbrSCKoCq98ADekLSmQSJN5STk+1hwQ4I97q5mrhuv93UBJ7EmFmgvXmLgFnIEZxNDkQe0gwUvfDs3Puct9US1Vky2TDxziDjFQM34exvIjkpUclk8iNaZQW1PFdr8hVeCOe3QHI5osOv6vYbqTL64j+PP4S3CFwBzQ58=","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login Templatecopy","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_templatecopy.robot","eNqtzEEKAjEMBdCrDN2Pf19qQfQKsx5im9FC25QmIt5e8AyuH7xAy3PycXZHqewBXD025am45FY6bvLuVSgrlF6JMzdZp9zFYKymqPIofTduo5JxkvE5/djFP4cBFL8pAD+y","*excute avant chaque test","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Hello there avant chaque test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    firefox    remote_url=http://192.168.1.55:4444/wd/hub","eNp9jUEOgjAQRa8yYcOukxoxSpAreIYWBkoiDJm21uM70Z2J/uX/P+/ddtqWbQYvXCIJ1NMiNPGzhsTgXSTIcoe6cxC0v1YhpT22iKUUE10eaKSVzcArVv3vrUPXKzEI5zmAaJ0IVPdQo0tfeCXYy8HY09lY0zTtUYNlxJD9x/Hn8BaZF3hYRDQ=","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"Login Templatecopy","name":"Login Templatecopy","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Login Templatecopy","name":"Login Templatecopy","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742986018611;
+window.output["baseMillis"] = 1742988873779;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1840;
+window.output["generated"] = 4823;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
