--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4792],[],[[4,0,0,[],[1,335,4455],[[0,5,6,0,7,8,0,0,[1,337,1],[]],[0,9,10,0,11,12,0,0,[1,339,3752],[[340,2,13]]],[0,14,10,0,15,0,0,0,[1,4092,694],[]],[2,16,10,0,17,0,0,0,[1,4789,1],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5102],[],[[4,0,5,[6,7],[1,354,4745],[[0,8,9,0,10,11,0,0,[1,356,1825],[[356,2,12]]],[0,13,14,0,0,15,0,0,[1,2183,241],[[0,16,9,0,17,18,0,0,[1,2184,239],[[2187,2,19]]]]],[0,20,14,0,0,21,0,0,[1,2427,239],[[0,16,9,0,17,22,0,0,[1,2428,237],[[2428,2,23]]]]],[0,24,14,0,0,0,0,0,[1,2667,159],[[0,25,9,0,26,27,0,0,[1,2668,157],[[2669,2,28]]]]],[0,29,14,0,0,0,0,0,[1,2826,44],[[0,30,9,0,31,32,33,0,[1,2827,41],[[2867,2,34]]],[0,35,36,0,37,38,0,0,[1,2868,1],[]],[0,39,36,0,40,33,0,0,[1,2869,1],[]]]],[2,41,9,0,42,0,0,0,[1,2872,2227],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login Templatecopy","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_templatecopy.robot","eNqtzEEKAjEMBdCrDN2Pf19qQfQKsx5im9FC25QmIt5e8AyuH7xAy3PycXZHqewBXD025am45FY6bvLuVSgrlF6JMzdZp9zFYKymqPIofTduo5JxkvE5/djFP4cBFL8pAD+y","*excute avant chaque test","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Hello there avant chaque test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    firefox    remote_url=http://192.168.1.55:4444/wd/hub","eNp9jUEOgjAQRa8yYcOukxoxSpAreIYWBkoiDJm21uM70Z2J/uX/P+/ddtqWbQYvXCIJ1NMiNPGzhsTgXSTIcoe6cxC0v1YhpT22iKUUE10eaKSVzcArVv3vrUPXKzEI5zmAaJ0IVPdQo0tfeCXYy8HY09lY0zTtUYNlxJD9x/Hn8BaZF3hYRDQ=","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1ndMyc3M03fJL8/LyU9MKdYvTixNTk1Jzc3XLcpPyi/RL0ktLinWz8lPz8zTA4so2VFuho1+oh0A8dY0xg==","*Login with valid credentials","*<p>login avec valid cred\x3c/p>","*login","*smoke","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    Chrome","*Opening browser 'Chrome' to base url '<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>'.","*Saisir user-name","*resource","*${USER}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_NAME}    ${username}","*Typing text 'standard_user' into text field 'id:user-name'.","*Saisir password","*${MDP}","*${LOCATOR_MDP}    ${MDP}","*Typing text 'secret_sauce' into text field 'id:password'.","*Cliquer sur login","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_BUTTON}","*Clicking button 'id:login-button'.","*Verifier la page d'accueil","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*class:title","*${text}","*${text} = Products","*Should Be Equal As Strings","*BuiltIn","*<p>Fails if objects are unequal after converting them to strings.\x3c/p>","*${text}    Products","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Login Templatecopy","name":"Login Templatecopy","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742988873779;
+window.output["baseMillis"] = 1742990408259;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4823;
+window.output["generated"] = 5128;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
