--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4792],[],[[4,0,0,[],[1,335,4455],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5102],[],[[4,0,5,[6,7],[1,354,4745],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login Templatecopy","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login_templatecopy.robot","eNqtzEEKAjEMBdCrDN2Pf19qQfQKsx5im9FC25QmIt5e8AyuH7xAy3PycXZHqewBXD025am45FY6bvLuVSgrlF6JMzdZp9zFYKymqPIofTduo5JxkvE5/djFP4cBFL8pAD+y","*excute avant chaque test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1ndMyc3M03fJL8/LyU9MKdYvTixNTk1Jzc3XLcpPyi/RL0ktLinWz8lPz8zTA4so2VFuho1+oh0A8dY0xg==","*Login with valid credentials","*<p>login avec valid cred\x3c/p>","*login","*smoke"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Login Templatecopy","name":"Login Templatecopy","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742988873779;
+window.output["baseMillis"] = 1742990408259;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4823;
+window.output["generated"] = 5128;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
