--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5102],[],[[4,0,5,[6,7],[1,354,4745],[[0,8,9,0,10,11,0,0,[1,356,1825],[[356,2,12]]],[0,13,14,0,0,15,0,0,[1,2183,241],[[0,16,9,0,17,18,0,0,[1,2184,239],[[2187,2,19]]]]],[0,20,14,0,0,21,0,0,[1,2427,239],[[0,16,9,0,17,22,0,0,[1,2428,237],[[2428,2,23]]]]],[0,24,14,0,0,0,0,0,[1,2667,159],[[0,25,9,0,26,27,0,0,[1,2668,157],[[2669,2,28]]]]],[0,29,14,0,0,0,0,0,[1,2826,44],[[0,30,9,0,31,32,33,0,[1,2827,41],[[2867,2,34]]],[0,35,36,0,37,38,0,0,[1,2868,1],[]],[0,39,36,0,40,33,0,0,[1,2869,1],[]]]],[2,41,9,0,42,0,0,0,[1,2872,2227],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10910],[],[[4,0,5,[6,7],[1,363,10543],[[0,8,9,0,10,11,0,0,[1,364,6804],[[365,2,12]]],[0,13,14,0,0,15,0,0,[1,7170,244],[[0,16,9,0,17,18,0,0,[1,7171,243],[[7172,2,19]]]]],[0,20,9,0,21,22,0,0,[1,7415,47],[[7416,2,23],[7431,2,24]]],[0,25,14,0,0,0,0,0,[1,7463,249],[[0,26,9,0,27,28,0,0,[1,7464,248],[[7465,2,29]]]]],[0,30,14,0,0,0,0,0,[1,7714,24],[[0,31,9,0,32,33,34,0,[1,7715,21],[[7735,2,35]]],[0,36,37,0,38,39,0,0,[1,7736,1],[]],[0,40,37,0,41,42,0,0,[1,7736,0],[]],[0,36,37,0,38,34,0,0,[1,7737,1],[]]]],[2,43,9,0,44,0,0,0,[1,7738,3166],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1ndMyc3M03fJL8/LyU9MKdYvTixNTk1Jzc3XLcpPyi/RL0ktLinWz8lPz8zTA4so2VFuho1+oh0A8dY0xg==","*Login with valid credentials","*<p>login avec valid cred\x3c/p>","*login","*smoke","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    Chrome","*Opening browser 'Chrome' to base url '<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>'.","*Saisir user-name","*resource","*${USER}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_NAME}    ${username}","*Typing text 'standard_user' into text field 'id:user-name'.","*Saisir password","*${MDP}","*${LOCATOR_MDP}    ${MDP}","*Typing text 'secret_sauce' into text field 'id:password'.","*Cliquer sur login","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_BUTTON}","*Clicking button 'id:login-button'.","*Verifier la page d'accueil","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*class:title","*${text}","*${text} = Products","*Should Be Equal As Strings","*BuiltIn","*<p>Fails if objects are unequal after converting them to strings.\x3c/p>","*${text}    Products","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1ndMyc3M03fJL8/LyU9MKdYvTixNTk1Jzc3XLcpPyi/RL0ktLinWz8lPz8zTA4so2VFuho1+oh0A8dY0xg==","*Login with invalid credentials","*<p>login avec valid cred\x3c/p>","*login","*smoke","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    firefox","*Opening browser 'firefox' to base url '<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>'.","*Saisir user-name","*resource","*${USER}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_NAME}    ${username}","*Typing text 'standard_user' into text field 'id:user-name'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id:password    bhbhbuiknjpllj","*Typing password into text field 'id:password'.","*Temporally setting log level to: NONE","*Cliquer sur login","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_BUTTON}","*Clicking button 'id:login-button'.","*Verifier le message d'erreur","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*${error_message}","*${text}","*${text} = Epic sadface: Username and password do not match any user in this service","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*'message: ${text}'","*Should Be Equal As Strings","*<p>Fails if objects are unequal after converting them to strings.\x3c/p>","*${text}    Epic sadface: Username and password do not match any user in this service","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:11","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742990408259;
+window.output["baseMillis"] = 1742990571743;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5128;
+window.output["generated"] = 10957;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
