--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10910],[],[[4,0,5,[6,7],[1,363,10543],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,3973],[],[[4,0,0,[],[1,426,3543],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1ndMyc3M03fJL8/LyU9MKdYvTixNTk1Jzc3XLcpPyi/RL0ktLinWz8lPz8zTA4so2VFuho1+oh0A8dY0xg==","*Login with invalid credentials","*<p>login avec valid cred\x3c/p>","*login","*smoke"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1ndMyc3M03fJL8/LyU9MKdYvTixNTk1Jzc3XLcpPyi/RL0ktLinWz8lPz8zTA4so2VFuho1+oh0A8dY0xg==","*excute avant chaque test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:11","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742990571743;
+window.output["baseMillis"] = 1742990817082;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10957;
+window.output["generated"] = 3998;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
