--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,3973],[],[[4,0,0,[],[1,426,3543],[[0,5,6,0,7,8,0,0,[1,427,1],[]],[0,9,10,0,11,12,0,0,[1,429,2856],[[429,2,13]]],[0,14,10,0,15,0,0,0,[1,3286,682],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,149352],[],[[4,0,5,[6,7],[1,525,148824],[[1,8,9,0,10,11,0,0,[1,527,147242],[[527,2,12]]],[0,13,14,0,0,15,0,0,[1,147772,268],[[0,16,9,0,17,18,0,0,[1,147772,266],[[147773,2,19]]]]],[0,20,9,0,21,22,0,0,[1,148040,114],[[148041,2,23],[148091,2,24]]],[0,25,14,0,0,0,0,0,[1,148155,292],[[0,26,9,0,27,28,0,0,[1,148156,291],[[148157,2,29]]]]],[0,30,14,0,0,0,0,0,[1,148449,117],[[0,31,9,0,32,33,34,0,[1,148451,110],[[148560,2,35]]],[0,36,37,0,38,39,0,0,[1,148561,1],[]],[0,40,37,0,41,42,0,0,[1,148563,1],[]],[0,36,37,0,38,34,0,0,[1,148565,1],[]]]],[2,43,9,0,44,0,0,0,[1,148568,779],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1ndMyc3M03fJL8/LyU9MKdYvTixNTk1Jzc3XLcpPyi/RL0ktLinWz8lPz8zTA4so2VFuho1+oh0A8dY0xg==","*excute avant chaque test","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Hello there avant chaque test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    firefox    remote_url=http://192.168.1.55:4444/wd/hub","eNp9jUEOgjAQRa8yYcOukxoxSpAreIYWBkoiDJm21uM70Z2J/uX/P+/ddtqWbQYvXCIJ1NMiNPGzhsTgXSTIcoe6cxC0v1YhpT22iKUUE10eaKSVzcArVv3vrUPXKzEI5zmAaJ0IVPdQo0tfeCXYy8HY09lY0zTtUYNlxJD9x/Hn8BaZF3hYRDQ=","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*c:\\Users\\Admin\\Downloads\\saucedemo-robot\\tests\\login.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1ndMyc3M03fJL8/LyU9MKdYvTixNTk1Jzc3XLcpPyi/RL0ktLinWz8lPz8zTA4so2VFuho1+oh0A8dY0xg==","*Login with invalid credentials","*<p>login avec valid cred\x3c/p>","*login","*smoke","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/\">https://www.saucedemo.com/\x3c/a>    firefox    remote_url=http://192.168.1.55:4444/wd/hub","eNp9jUEOgjAQRa8yYcOukxoxSpAreIYWBkoiDJm21uM70Z2J/uX/P+/ddtqWbQYvXCIJ1NMiNPGzhsTgXSTIcoe6cxC0v1YhpT22iKUUE10eaKSVzcArVv3vrUPXKzEI5zmAaJ0IVPdQo0tfeCXYy8HY09lY0zTtUYNlxJD9x/Hn8BaZF3hYRDQ=","*Saisir user-name","*resource","*${USER}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_NAME}    ${username}","*Typing text 'standard_user' into text field 'id:user-name'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id:password    bhbhbuiknjpllj","*Typing password into text field 'id:password'.","*Temporally setting log level to: NONE","*Cliquer sur login","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${LOCATOR_BUTTON}","*Clicking button 'id:login-button'.","*Verifier le message d'erreur","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*${error_message}","*${text}","*${text} = Epic sadface: Username and password do not match any user in this service","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*'message: ${text}'","*Should Be Equal As Strings","*<p>Fails if objects are unequal after converting them to strings.\x3c/p>","*${text}    Epic sadface: Username and password do not match any user in this service","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:02:29","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:02:29","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:02:29","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:02:29","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742990817082;
+window.output["baseMillis"] = 1742993650595;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3998;
+window.output["generated"] = 149418;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
